@@ -365,8 +365,6 @@ text_display (uint8_t kind)
 }
 
 
-static void setup_scr_sleepdeep (void);
-
 int
 main (int argc, const char *argv[])
 {
@@ -421,7 +419,5 @@ main (int argc, const char *argv[])
   chopstx_join (led_thd, NULL);
 
   chopstx_conf_idle (4);
-  chopstx_poll (NULL, 0, NULL);
-
   return 0;
 }
