@@ -1,3 +1,7 @@
+2017-11-18  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* example-fsm-55/hh.c (main): Just return.
+
 2017-11-17  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* mcu/chx-stm32f103.c (configure_clock): Change prescaler on
